[tool.poetry]
name = "employee-portal"
version = "0.1.0"
description = ""
authors = ["Andreas Bergman <andreas@arjancodes.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.104.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
