[tool.poetry]
name = "Clean code tips"
version = "0.1.0"
description = ""
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
stripe = "^9.6.0"
requests = "^2.31.0"
pydantic = "^2.7.1"
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

