[tool.poetry]
name = "employee-portal"
version = "0.1.0"
description = ""
authors = ["Andreas Bergman <andreas@arjancodes.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.104.1"
httpx = "^0.25.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
