[tool.poetry]
name = "Functional programming techniques in Python"
version = "0.1.0"
description = ""
authors = ["ArjanCodes"]
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "python main.py"
