[tool.poetry]
name = "python15"
version = "0.1.0"
description = ""
authors = ["ArjanCodes"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.35"
sympy = "^1.13.2"
bs4 = "^0.0.2"
pygame = "^2.6.0"
missingno = "^0.5.2"
jinja2 = "^3.1.4"
watchdog = "^5.0.2"
returns = "^0.23.0"
numerizer = "^0.2.3"
python-box = "^7.2.0"
pipe = "^2.2"
nicegui = "^2.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
