[tool.poetry]
name = "uncommon_db"
version = "0.1.0"
description = ""
authors = ["ArjanCodes"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
influxdb-client = "^1.45.0"
redis = "^5.0.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
