[tool.poetry]
name = "vscode-python"
version = "0.1.0"
description = ""
authors = ["Andreas Bergman <andreas@arjancodes.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "src"