[project]
name = "fastapi-example"
version = "0.1.0"
description = "A very simple FastAPI application"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.121.1",
    "uvicorn>=0.21.1",
    "h11>=0.16.0,<0.18.0",     # explicitly override vulnerable transitive version (GHSA-vqfr-h8mv-ghfj)
    "starlette>=0.49.1,<0.51.0" # ← enforce patched version (CVE‑2025‑62727)
]
