[project]
name = "libraries"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.13",
    "fastapi-pagination>=0.13.2",
    "flet[all]>=0.28.3",
    "httpx>=0.28.1",
    "hypothesis>=6.135.14",
    "nicegui>=2.20.0",
    "pydantic-ai>=0.3.2",
    "pydantic-settings>=2.10.0",
    "pytest>=8.4.1",
    "reflex>=0.7.14",
    "rich>=14.0.0",
    "tabulate>=0.9.0",
    "textual>=3.5.0",
    "toolz>=1.0.0",
    "uvicorn>=0.34.3",
]
